--- a/config_example.env
+++ b/config_example.env
@@ -8,7 +8,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 VIJIL_API_KEY=your_vijil_api_key_here
 
 # Optional: Custom LLM settings
-# OPENAI_MODEL=gpt-4
+# OPENAI_MODEL=gpt-4o-mini        # Default: fast and affordable
+# OPENAI_MODEL=gpt-3.5-turbo      # Alternative: classic ChatGPT
+# OPENAI_MODEL=gpt-4o             # Advanced: latest GPT-4
+# OPENAI_MODEL=gpt-4              # Premium: original GPT-4 (requires paid plan)
 # ANTHROPIC_MODEL=claude-3-sonnet-20240229
 
 # Optional: Agent configuration
